fix: make code input sufficiently tall on mobile devices

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,7 +27,16 @@ $link-dark: $cyan;
 }
 
 #editor {
-  background: $background
+  background: $background;
+  min-height: 25svh;
+}
+
+#editor > * {
+  min-height: inherit;
+}
+
+#code-input {
+  flex: 1;
 }
 
 #router-content {
